--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/core_server?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: fuhaiwei
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
+      table-name: SPRING_SESSION
+      schema: classpath:org/springframework/session/jdbc/schema-mysql.sql
