--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/core_server?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: fuhaiwei
+  jpa:
+    open-in-view: true
   session:
     store-type: jdbc
     jdbc:
