--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,13 @@ spring:
     username: root
     password: fuhaiwei
   jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL57Dialect
+      hibernate.format_sql: true
     open-in-view: true
+    show-sql: false
   session:
     store-type: jdbc
     jdbc:
