--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ server:
   port: 5000
 
 spring:
+  application:
+    name: "@pom.artifactId@"
+  activemq:
+    broker-url: tcp://localhost:61616
+    password: ${activemq.password}
+    user: admin
   datasource:
     url: jdbc:mysql://localhost:3306/core_server?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
