--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     url: jdbc:mysql://localhost:3306/core_server?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: fuhaiwei
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
