--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: "@pom.artifactId@"
   activemq:
     broker-url: tcp://localhost:61616
-    password: ${activemq.password}
+    password: ${activemq.password:admin}
     user: admin
   datasource:
     url: jdbc:mysql://localhost:3306/core_server?useUnicode=true&characterEncoding=utf-8&useSSL=false
